@startuml er-model
title "Party Time ER-Modell"
skinparam linetype ortho

entity Account {
    * id: bigint <<generated>>
    --
    * email: character varying(255)
    * emailVerified: boolean
    * name: character varying(255)
    * pwHash: character varying(255)
    * emailVerificationCode: character varying(255)
    * passwordVerificationCode: character varying(255)
}

entity EventParticipant {
    * account_id: bigint <<Account FK>>
    * event_id: bigint <<Event FK>>
    --
    * status: ENUM('INVITED', 'PARTICIPATING', 'REJECTED')
}

entity Event {
    * id: bigint <<generated>>
    --
    * organizer_id: bigint <<Account FK>>
    * name: character varying(255)
    * dateTime: timestamp
    * address: bigint <<Address FK>>
}

entity Address {
    * id: bigint <<generated>>
    --
    * addressLine: character varying(255)
    * addressAddition: character varying(255)
    * zip: character varying(255)
    * city: character varying(255)
    * country: character varying(255)
}

Account ||--o{ Event
Account }o--o{ EventParticipant
EventParticipant }o--o{ Event
Event }o--|| Address
@enduml
